tests/semantic_errors/gajdosik1_3.tl
require "ifj21"
--redefinicia vnorena
global name : function (integer) : string, string, string
function name    (a : integer, a : integer) : string, string, string end

function main()
    local id : integer = 102
    while 1 do
        while 1 do
            while 1 do
                while 1 do
                    local id : integer = 89
                end
	    id = 90
            end
        end
        id = 80
    end

end

main()